--- a/App1/manifest.yaml
+++ b/App1/manifest.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: app1
 spec: 
   selector:
     name: app1
@@ -35,3 +35,21 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-wildcard-host
+spec:
+  rules:
+  - host: "app1.devopskk.online" # ALB rule
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: app1 # ALB TG
+            port:
+              number: 80
+# if someone hits app1.devopskk.online - it will go to app1 service 
