--- a/App2/manifest.yaml
+++ b/App2/manifest.yaml
@@ -6,7 +6,6 @@ metadata:
     name: app2
     purpose: ingress
 spec:
-  replicas: 1
   selector:
     matchLabels:
       name: app2
@@ -39,7 +38,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-wildcard-host
+  name: app2
   annotations:
         alb.ingress.kubernetes.io/scheme: internet-facing
         alb.ingress.kubernetes.io/target-type: ip
